支持html源码和预览、暂时放弃markdown原生渲染

--- a/PandaNote/Resource/markdown.html
+++ b/PandaNote/Resource/markdown.html
@@ -9,6 +9,7 @@
   <style type="text/css">
   img {
     max-width: 100%;
+    /*水平居中*/
     display: block;
     margin-left: auto;
     margin-right: auto;
