修复反引号（backquote / backtick）和单引号不转义无法渲染成html的bug;模仿掘金的样式，表格可水平滑动

--- a/PandaNote/Resource/markdown.html
+++ b/PandaNote/Resource/markdown.html
@@ -70,6 +70,13 @@
     border-radius: 6px;
     box-shadow: 0 8px 24px rgba(149, 157, 165, .2);
   }
+  /*模仿掘金的样式，表格可水平滑动 https://juejin.cn/post/6844904154427572231*/
+  table {
+    display: inline-block!important;
+    /* width: auto; */
+    max-width: 100%;
+    overflow: auto;
+  }
   </style>
 </head>
 
