--- a/PandaNote/Resource/markdown.html
+++ b/PandaNote/Resource/markdown.html
@@ -25,10 +25,13 @@
     padding: 1em;
   }
 
-  #content code {
+  pre code {
     /*小块区域左右滑动，整体禁止左右滑动*/
     overflow-x: auto;
     display: block;
+  }
+  #content p {
+  	word-wrap: break-word;
   }
 
   div[class*=language-] {
@@ -93,9 +96,17 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/marked@1.1.0/lib/marked.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/marked@1.1.0/lib/marked.js"></script>
+  <!-- <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.3.2/highlight.min.js"></script> -->
+  <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.0/build/styles/default.min.css">
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.4.0/build/highlight.min.js"></script>
+  <!-- <script></script> -->
   <script>
+  	//代码高亮设置
+	hljs.initHighlightingOnLoad();
+
   var showTOC = false;
-  let string = '渲染中...\n\nRendered by **marked**.'
+  let string = '正在由**marked.js**渲染中...\n\nRendered by **marked.js**.'
   // document.getElementById('content').innerHTML = marked(string);
 
 
@@ -135,7 +146,12 @@
     smartLists: true,
     smartypants: false
   });
-
+	//代码高亮设置
+	marked.setOptions({
+        highlight: function (code) {
+        return hljs.highlightAuto(code).value;
+      }
+    });
   function build(coll, k, level, ctx) {
     if (k >= coll.length || coll[k].level <= level) { return k; }
     var node = coll[k];
