使用HTTP服务器加载预览图片 use HTTP Server preview image

--- a/PandaNote/Resource/markdown.html
+++ b/PandaNote/Resource/markdown.html
@@ -287,6 +287,7 @@
 
     for (let i = 0; i < pArray.length; i++) {
       const element = pArray[i];
+      // console.log(element.innerText);
       if (element.innerText.includes(text)) {
         console.log("scrollToText",element.offsetTop);
         element.scrollIntoView();
@@ -298,14 +299,16 @@
 
   function replaceImgPath(rootPath) {
     const obj = Array.from(document.querySelectorAll("img"));
-    console.log("rootPath:",rootPath);
+    console.log("rootPath:",rootPath);//eg:file:///.../Library/Caches/PandaCache/坚果云/TestCase/markdown/
     for (var i = obj.length - 1; i >= 0; i--) {
       let element = obj[i]
       //如果是App包里的markdown.html文件
       if (element.src.includes("PandaNote.app") || element.src.includes("127.0.0.1:8083")) {
         let filePath = element.src.split("PandaNote.app")[1];
         // let filePath = element.src.split("127.0.0.1:8083")[1];// debug path
-        filePath = rootPath + filePath
+        console.log("filePathOld",filePath);
+        filePath = "http://127.0.0.1:23333" + rootPath.split("PandaCache")[1] + filePath
+        console.log("rootPath",rootPath,"filePath",filePath);
         element.src = filePath
       }
     }
